--- a/index.html
+++ b/index.html
@@ -46,8 +46,18 @@
         </nav>
   </header>
 
+    <main>
 
-
+          <div id="headerpost">
+          <img class="d-block w-100" src="img/Introdution.png" alt="Catalog">
+          <div id="lead">
+              <h2>   </h2>
+              <p>
+              <p class="data">   </p>
+              <p class="more_s">   </p>
+        </div>
+    </div>      
+    </main>
 
     <footer>
          <p>MYTH GREECE</p>
