--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 
           <div id="headerpost">
           <img class="d-block w-100" src="img/Introdution.png" alt="Catalog">
+          <img class="d-block w-100" src="img/4web-intro.png" alt="4">
+          <img class="d-block w-100" src="img/5web-intro.png" alt="5">
+          <img class="d-block w-100" src="img/6web-intro.png" alt="6">
+          <img class="d-block w-100" src="img/7web-intro.png" alt="7">
+          <img class="d-block w-100" src="img/8web-intro.png" alt="8">
           <div id="lead">
               <h2>   </h2>
               <p>
